[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
